--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,29 +7,27 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      - uses: kenchan0130/actions-system-info@master
+      - uses: kenchan0130/actions-system-info@v1.3.0
         id: system-info
       # Checks-out the repository
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
 
-      - name: setup llvm 15 repo 
+      - name: setup llvm 16 repo 
         run: |
-          echo "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main" | sudo tee -a /etc/apt/sources.list
-          echo "deb-src http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main"  | sudo tee -a /etc/apt/sources.list
+          echo "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main" | sudo tee -a /etc/apt/sources.list
+          echo "deb-src http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"  | sudo tee -a /etc/apt/sources.list
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
           sudo apt update
 
 
       - name: Set up OCaml
-        # You may pin to the exact commit or the version.
-        # uses: ocaml/setup-ocaml@6d924c1a7769aa5cdd74bdd901f6e24eb05024b1
-        uses: ocaml/setup-ocaml@v2
+        uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: 5.1.X
+          ocaml-compiler: 5
 
 
       - run: opam install . --deps-only
@@ -37,7 +35,7 @@ jobs:
       - run: opam exec -- dune build
 
       - name: Archive sailor
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sailor for ${{ steps.system-info.outputs.release }}
           path: |
